<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.login.ui.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_marginTop="20sp"
            android:src="@drawable/ic_register"
            app:layout_constraintBottom_toTopOf="@id/guideline_center"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:hint="@string/email_hint"
            app:layout_constraintBottom_toTopOf="@+id/ageTextField"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/age_hint"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextField"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/password_hint"
            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmTextField"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/password_hint"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordConfirmText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/signUpColor"
            android:maxWidth="250sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toTopOf="@id/signInBtn"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="10sp"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_btm"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_btm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="15sp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25sp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="25sp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>